--- a/index.html
+++ b/index.html
@@ -269,7 +269,5 @@
         <h2><span class="szoveg">LINK;
         TELEFONSZÁM; E-MAIL CÍM;
         KÉSZÍTETTE: Lévai Viktória 113C - 2020.12.02</span></h2>
-      </footer>
-</div>
-</body>
+</footer></div></body>
 </html>
